Include Dragon Land interiors in kill tracking